[package]
name = "clean_diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

kiley = {git = "https://github.com/ban-m/kiley.git", branch = "master"}
serde = {version = "1.0", features = ["derive"]}
rayon = "1.5.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde_json = "1.0"
clap = {version = "3.2.22", features = ["derive"]}